knife buggy cut #41164

Closed
opened 2014-07-24 13:12:08 +02:00 by Sanc Tuary · 12 comments

System Information
Operating system and graphics card
windows and linux

Blender Version
Broken: Blender 2.71 "stable"
Worked: i don't remember a version of Blender in which the Bmesh knife was working without problems

Short description of error
Knife can duplicate vertices on cut edges, as reported here :
http://blenderartists.org/forum/showthread.php?317503-Problem-Knife-Tool-Strange-behavior&p=2691898&viewfull=1#post2691898

Exact steps for others to reproduce the error

  • Load the blend with Load UI so you get the same view and visual

buggyknife.blend

The oddity is that it does not happen everytime, but it happens.

Video of the bug from the original reporter on the Blenderartist board :
http://blenderartists.org/forum/showthread.php?317503-Problem-Knife-Tool-Strange-behavior&p=2692404&viewfull=1#post2692404

**System Information** Operating system and graphics card windows and linux **Blender Version** Broken: Blender 2.71 "stable" Worked: i don't remember a version of Blender in which the Bmesh knife was working without problems **Short description of error** Knife can duplicate vertices on cut edges, as reported here : http://blenderartists.org/forum/showthread.php?317503-Problem-Knife-Tool-Strange-behavior&p=2691898&viewfull=1#post2691898 **Exact steps for others to reproduce the error** - Load the blend with Load UI so you get the same view and visual [buggyknife.blend](https://archive.blender.org/developer/F99368/buggyknife.blend) - press K and try to cut at these locations : http://i.imgur.com/JmHHYPM.jpg - If you managed to did the cut roughly there, you'll notice the vertices there are doubled : http://i.imgur.com/oZfSl5g.jpg The oddity is that it does not happen everytime, but it happens. Video of the bug from the original reporter on the Blenderartist board : http://blenderartists.org/forum/showthread.php?317503-Problem-Knife-Tool-Strange-behavior&p=2692404&viewfull=1#post2692404
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @sanctuary

Added subscriber: @sanctuary
Author

Thanks to Eppo pointing it, it looks like that problem can be avoided by scaling up the mesh, it looks like when edges are small (i mean something like 0.0x blender units, x being a number ) , the chances of the doubled vertices at a cut will increase a lot.

Thanks to Eppo pointing it, it looks like that problem can be avoided by scaling up the mesh, it looks like when edges are small (i mean something like 0.0x blender units, x being a number ) , the chances of the doubled vertices at a cut will increase a lot.
Howard Trickey was assigned by Sergey Sharybin 2014-07-28 12:49:36 +02:00

Added subscribers: @howardt, @Sergey

Added subscribers: @howardt, @Sergey

@howardt, mind having a check, thanks!

@howardt, mind having a check, thanks!

Added subscriber: @sindra1961

Added subscriber: @sindra1961

When I cut it in mid-point, double vertices does not seem to appear.

When I cut it in mid-point, double vertices does not seem to appear.
Member

I'm not having any success in making this bug appear with the supplied buggyknife.blend. I'll read through the forum thread and see if I can find another condition that may trigger it for me.

I'm not having any success in making this bug appear with the supplied buggyknife.blend. I'll read through the forum thread and see if I can find another condition that may trigger it for me.
Member

Oh, I see, there are doubled vertices (which I can tell by box selecting in wire mode), not just separated the way they were in the screen shot. So I confirm the problem and can work on it.

Oh, I see, there are doubled vertices (which I can tell by box selecting in wire mode), not just separated the way they were in the screen shot. So I confirm the problem and can work on it.

This issue was referenced by 1510d0d441

This issue was referenced by 1510d0d4417c4ec91b19f06fac6f62ad7df3275b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1510d0d441.

Closed by commit 1510d0d441.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41164
No description provided.