Fix T41164: Knife creates duplicate verts